Notify users when the status of the record changes

--- a/src/classes/ArtistTriggerHandler.cls
+++ b/src/classes/ArtistTriggerHandler.cls
@@ -7,4 +7,8 @@ public class ArtistTriggerHandler {
     public void onBeforeDelete(List<MBMS_Artist__c> artists) {
         ArtistTriggerUtility.removeRelatedMovieActors(artists);
     }
+
+    public void onAfterUpdate(List<MBMS_Artist__c> artists) {
+        ArtistTriggerUtility.notifyApprovers(artists);
+    }
 }
