--- a/src/classes/BookTriggerHandler.cls
+++ b/src/classes/BookTriggerHandler.cls
@@ -3,4 +3,8 @@ public class BookTriggerHandler {
         BookTriggerUtility.updateBookNames(books);
         BookTriggerUtility.updateBookStatusComments(books);
     }
+
+    public void onAfterUpdate(List<MBMS_Book__c> books) {
+        BookTriggerUtility.notifyApprovers(books);
+    }
 }
