--- a/src/classes/ArtistTriggerUtility.cls
+++ b/src/classes/ArtistTriggerUtility.cls
@@ -17,4 +17,26 @@ public class ArtistTriggerUtility {
         
         delete movieActors;
     }
+
+    public static void notifyApprovers(List<MBMS_Artist__c> artists) {
+        Group approversQueue = [SELECT Id
+                                FROM Group WHERE Type = :MBMS_Constants.QUEUE_GROUP_TYPE
+                                AND Name = :MBMS_Constants.APPROVERS_QUEUE
+                                LIMIT 1];
+        
+        List<GroupMember> approvers = [SELECT UserOrGroupId
+                                       FROM GroupMember
+                                       WHERE GroupId = :approversQueue.Id];
+
+        for (MBMS_Artist__c artist : artists) {
+            if (artist.MBMS_Status__c == MBMS_Constants.MBMS_STATUS_APPROVED) {
+                continue;
+            }
+
+            for (GroupMember approver : approvers) {
+                CustomNotification notification = new CustomNotification(MBMS_Constants.PLEASE_TAKE_ACTION, String.format(MBMS_Constants.RECORD_TO_APPROVE_PATTERN, new List<String> { artist.Name, artist.Id }), new Set<String> { approver.UserOrGroupId }, artist.Id);
+                notification.send();
+            }
+        }
+    }
 }
