Change the trigger from after to before update

--- a/src/classes/ArtistTriggerHandler.cls
+++ b/src/classes/ArtistTriggerHandler.cls
@@ -8,7 +8,7 @@ public class ArtistTriggerHandler {
         ArtistTriggerUtility.removeRelatedMovieActors(artists);
     }
 
-    public void onAfterUpdate(List<MBMS_Artist__c> artists) {
+    public void onBeforeUpdate(List<MBMS_Artist__c> artists) {
         ArtistTriggerUtility.notifyApprovers(artists);
     }
 }
