Make the queue the owner of the record when updating the status field

--- a/src/classes/BookTriggerUtility.cls
+++ b/src/classes/BookTriggerUtility.cls
@@ -32,6 +32,8 @@ public class BookTriggerUtility {
                 continue;
             }
             
+            book.OwnerId = approversQueue.Id;
+
             new CustomNotificationBuilder().create()
                 .withTitle(MBMS_Constants.PLEASE_TAKE_ACTION)
                 .withBody(String.format(MBMS_Constants.RECORD_TO_APPROVE_PATTERN, new List<String> { book.Name, book.Id }))
