--- a/src/classes/ArtistTriggerUtility.cls
+++ b/src/classes/ArtistTriggerUtility.cls
@@ -39,6 +39,8 @@ public class ArtistTriggerUtility {
                 continue;
             }
             
+            artist.OwnerId = approversQueue.Id;
+
             new CustomNotificationBuilder().create()
                 .withTitle(MBMS_Constants.PLEASE_TAKE_ACTION)
                 .withBody(String.format(MBMS_Constants.RECORD_TO_APPROVE_PATTERN, new List<String> { artist.Name, artist.Id }))
