--- a/src/classes/BookTriggerHandlerTest.cls
+++ b/src/classes/BookTriggerHandlerTest.cls
@@ -28,4 +28,26 @@ private class BookTriggerHandlerTest {
         
         System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, book.MBMS_Status_Comment__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT }));
     }
+
+    @isTest
+    static void triggerShouldUpdateRecordOwner() {
+        Test.startTest();
+        MBMS_Book__c book = [SELECT OwnerId
+                             FROM MBMS_Book__c
+                             LIMIT 1];
+        book.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+        update book;
+
+        Group approversQueue = [SELECT Id
+                                FROM Group WHERE Type = :MBMS_Constants.QUEUE_GROUP_TYPE
+                                AND Name = :MBMS_Constants.APPROVERS_QUEUE
+                                LIMIT 1];
+        Test.stopTest();
+
+        book = [SELECT OwnerId
+                FROM MBMS_Book__c
+                LIMIT 1];
+        
+        System.assertEquals(approversQueue.Id, book.OwnerId, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'OwnerId', approversQueue.Id }));
+    }
 }
