--- a/src/classes/MovieTriggerHandlerTest.cls
+++ b/src/classes/MovieTriggerHandlerTest.cls
@@ -47,4 +47,26 @@ private class MovieTriggerHandlerTest {
         
         System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, movie.MBMS_Status_Comment__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT }));
     }
+
+    @isTest
+    static void triggerShouldUpdateRecordOwner() {
+        Test.startTest();
+        MBMS_Movie__c movie = [SELECT OwnerId
+                               FROM MBMS_Movie__c
+                               LIMIT 1];
+        movie.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+        update movie;
+
+        Group approversQueue = [SELECT Id
+                                FROM Group WHERE Type = :MBMS_Constants.QUEUE_GROUP_TYPE
+                                AND Name = :MBMS_Constants.APPROVERS_QUEUE
+                                LIMIT 1];
+        Test.stopTest();
+
+        movie = [SELECT OwnerId
+                 FROM MBMS_Movie__c
+                 LIMIT 1];
+        
+        System.assertEquals(approversQueue.Id, movie.OwnerId, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'OwnerId', approversQueue.Id }));
+    }
 }
