Display component only if the user is a member of the approvers queue

--- a/src/classes/RequiringActionRecordsControllerTest.cls
+++ b/src/classes/RequiringActionRecordsControllerTest.cls
@@ -2,6 +2,22 @@
 private class RequiringActionRecordsControllerTest {
     @testSetup
     static void testDataSetup() {
+        // TODO: Create builder or factory class for User object (+ some constant values).
+        Profile profile = [SELECT Id FROM Profile LIMIT 1];
+
+        User user = new User();
+        user.LastName = MBMS_Constants.MBMS_TEST_STRING_VALUE;
+        user.Email = 'test1@test.pl';
+        user.Alias = 'test';
+        user.Username = 'test123@test.pl';
+        user.CommunityNickname = MBMS_Constants.MBMS_TEST_STRING_VALUE;
+        user.LocaleSidKey = 'en_US';
+        user.TimeZoneSidKey = 'GMT';
+        user.ProfileId = profile.Id;
+        user.LanguageLocaleKey = 'en_US';
+        user.EmailEncodingKey = 'UTF-8';
+        insert user;
+
         new ArtistBuilder()
             .create()
             .buildWithAllFieldsAndInsert();
@@ -64,5 +80,40 @@ private class RequiringActionRecordsControllerTest {
         Test.stopTest();
         
         System.assert(areRequiringActionRecordsAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'areRequiringActionRecordsAvailable' }));
+    }
+
+    @isTest
+    static void userShouldBeAbleToSeeTheComponent() {
+        User user = [SELECT Id FROM User WHERE Email = 'test1@test.pl' LIMIT 1];
+        System.runAs(user) {
+            Test.startTest();
+
+            Group queue = [SELECT Id
+                           FROM Group
+                           WHERE Type = :MBMS_Constants.QUEUE_GROUP_TYPE
+                           AND Name = :MBMS_Constants.APPROVERS_QUEUE];
+
+            GroupMember groupMember = new GroupMember();
+            groupMember.UserOrGroupId = user.Id;
+            groupMember.GroupId = queue.Id;
+            insert groupMember;
+
+            Boolean isUserAbleToSeeTheComponent = RequiringActionRecordsController.shouldUserBeAbleToSeeTheComponent();
+            Test.stopTest();
+
+            System.assert(isUserAbleToSeeTheComponent, String.format(MBMS_Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'isUserAbleToSeeTheComponent' }));
+        }
+    }
+
+    @isTest
+    static void userShouldNotBeAbleToSeeTheComponent() {
+        User user = [SELECT Id FROM User WHERE Email = 'test1@test.pl' LIMIT 1];
+        System.runAs(user) {
+            Test.startTest();
+            Boolean isUserAbleToSeeTheComponent = RequiringActionRecordsController.shouldUserBeAbleToSeeTheComponent();
+            Test.stopTest();
+
+            System.assert(!isUserAbleToSeeTheComponent, String.format(MBMS_Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'isUserAbleToSeeTheComponent' }));
+        }
     }
 }
